--- a/examples/css/feedback.css
+++ b/examples/css/feedback.css
@@ -54,12 +54,12 @@
     line-height: 18px;
     color: #333;
     position: fixed;
-    top: 50%;
+    top: 45%;
     left: 50%;
     z-index: 2050;
-    max-height: 500px;
+    max-height: 670px;
     overflow: auto;
-    width: 560px;
+    width: 605px;
     margin: -250px 0 0 -280px;
     background-color: #ffffff;
     border: 1px solid #999;
@@ -79,8 +79,8 @@
 
 
     -webkit-transition: all 2s ease 0s;
-    -moz-transition: all 2s ease 0s;  
-    -ms-transition: all 2s ease 0s; 
+    -moz-transition: all 2s ease 0s;
+    -ms-transition: all 2s ease 0s;
     -o-transition: all 2s ease 0s;
 
 }
@@ -300,7 +300,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     display: inline-block;
-    width: 520px;
+    width: 100%;
     height: 100px;
     padding: 4px;
     margin-bottom: 9px;
@@ -333,6 +333,10 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
 
 }
 
+.feedback-body label:after {
+    content: " *";
+    color: red;
+}
 
 
 .feedback-footer {
@@ -373,7 +377,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     height:100%;
     background: #777;
     opacity: 0.5;
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; 
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
 }
 
@@ -388,7 +392,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
 
 #feedback-blackout-element {
     background: #000;
-    opacity: 0.8; 
+    opacity: 0.8;
     position:absolute;
 
 }
@@ -417,7 +421,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     border:1px solid black;
     text-align:center;
     line-height:20px;
-    font-size:20px;
+    font-size:12px;
     font-weight:bold;
     width:20px;
     height:20px;
@@ -465,14 +469,14 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     left:100%;
     width: 300px;
     margin-left:-320px;
-    margin-top: -200px;
+    margin-top: -230px;
 
 }
 
 .feedback-animate-review {
     -webkit-transition: all 2s ease 0s;
-    -moz-transition: all 2s ease 0s;  
-    -ms-transition: all 2s ease 0s; 
+    -moz-transition: all 2s ease 0s;
+    -ms-transition: all 2s ease 0s;
     -o-transition: all 2s ease 0s;
 
     top: 50%;
@@ -503,7 +507,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
 
 
 .feedback-loader {
-    text-align: center;    
+    text-align: center;
 }
 .feedback-loader span {
     display: inline-block;
