CSS styles for button
Signed-off-by: Georgios Kokosioulis <georgios.kokosioulis@cern.ch>

--- a/examples/css/feedback.css
+++ b/examples/css/feedback.css
@@ -164,6 +164,22 @@
     -o-transition: background-position 0.1s linear;
     transition: background-position 0.1s linear;
 }
+.feedback-btn.feedback-fixed-right:hover {
+    color: #F4F4F4;
+    margin-left: -24px;
+    text-decoration: none;
+    text-shadow: 0 1px 1px #333333;
+    border: 1px solid #75a3d;
+    background-color: #6093cc; /* Old browsers */
+    background: -moz-linear-gradient(left,  #6093cc 0%, #84b6eb 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6093cc), color-stop(100%,#84b6eb)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* IE10+ */
+    background: linear-gradient(to right,  #6093cc 0%,#84b6eb 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6093cc', endColorstr='#84b6eb',GradientType=1 ); /* IE6-9 */
+}
+
 .feedback-btn:focus {
     outline: thin dotted #333;
     outline: 5px auto -webkit-focus-ring-color;
@@ -270,6 +286,24 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     right:5px;
 }
 
+.feedback-fixed-right {
+    position: fixed;
+    right: 0px;
+    display: block;
+    top: 50%;
+    margin-right: -44px;
+}
+
+.feedback-transform {
+    -webkit-transform:rotate(-90deg);
+    -moz-transform:rotate(-90deg);
+    -ms-transform:rotate(-90deg);
+    -o-transform:rotate(-90deg);
+    transform:rotate(-90deg);
+    -webkit-transition: all 0.15s ease-in-out;
+    -moz-transition: all 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
+}
 
 
 .feedback-header {
