--- a/examples/css/feedback.css
+++ b/examples/css/feedback.css
@@ -285,25 +285,50 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     right:5px;
 }
 
-.feedback-fixed-right {
+.feedback-button {
     position: fixed;
-    right: 0px;
+    right: 0;
+    top: 40%;
+    background-color: #1C5BD0;
+    width: 40px;
+    height: 36px;
+    line-height: 36px;
+    z-index: 999;
+    border: 0;
+    padding: 0px 8px;
     display: block;
-    top: 50%;
-    margin-right: -44px;
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    -ms-border-radius: 5px 0 0 5px;
+    -o-border-radius: 5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
+    color: #fff;
+    -webkit-transition-property: width;
+    -moz-transition-property: width;
+    -o-transition-property: width;
+    transition-property: width;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-in;
+    -moz-transition-timing-function: ease-in;
+    -o-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    overflow: hidden;
+    -webkit-box-shadow: rgba(0,0,0,0.3) -1px 1px 1px 1px;
+    -moz-box-shadow: rgba(0,0,0,0.3) -1px 1px 1px 1px;
+    -o-box-shadow: rgba(0,0,0,0.3) -1px 1px 1px 1px;
+    box-shadow: rgba(0,0,0,0.3) -1px 1px 1px 1px;
 }
-
-.feedback-transform {
-    -webkit-transform:rotate(-90deg);
-    -moz-transform:rotate(-90deg);
-    -ms-transform:rotate(-90deg);
-    -o-transform:rotate(-90deg);
-    transform:rotate(-90deg);
-    -webkit-transition: all 0.15s ease-in-out;
-    -moz-transition: all 0.15s ease-in-out;
-    transition: all 0.15s ease-in-out;
+.feedback-button i{
+    color:#fff;
+    font-size:1.5em;
+    margin-right:5px
 }
-
+.feedback-button:hover{
+    width:150px
+}
 
 .feedback-header {
     padding: 9px 15px;
