new styles for feedback button

--- a/examples/css/feedback.css
+++ b/examples/css/feedback.css
@@ -144,7 +144,7 @@
 .feedback-btn.active,
 .feedback-btn.disabled,
 .feedback-btn[disabled] {
-    background-color: #e6e6e6;
+    /*background-color: #e6e6e6;*/
 }
 .feedback-btn:active, .feedback-btn.active {
     background-color: #cccccc \9;
@@ -155,7 +155,7 @@
 .feedback-btn:hover {
     color: #333333;
     text-decoration: none;
-    background-color: #e6e6e6;
+    background-color: #5889c2;
     background-position: 0 -15px;
     -webkit-transition: background-position 0.1s linear;
     -moz-transition: background-position 0.1s linear;
@@ -167,18 +167,23 @@
     color: #F4F4F4;
     margin-left: -24px;
     text-decoration: none;
-    text-shadow: 0 1px 1px #333333;
+    /*text-shadow: 0 1px 1px #333333;*/
     border: 1px solid #75a3d;
-    background-color: #6093cc; /* Old browsers */
-    background: -moz-linear-gradient(left,  #6093cc 0%, #84b6eb 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6093cc), color-stop(100%,#84b6eb)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  #6093cc 0%,#84b6eb 100%); /* IE10+ */
-    background: linear-gradient(to right,  #6093cc 0%,#84b6eb 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6093cc', endColorstr='#84b6eb',GradientType=1 ); /* IE6-9 */
+    /*background-color: #6093cc;*/ /* Old browsers */
+    /*background: -moz-linear-gradient(left,  #6093cc 0%, #84b6eb 100%);*/ /* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6093cc), color-stop(100%,#84b6eb));*/ /* Chrome,Safari4+ */
+    /*background: -webkit-linear-gradient(left,  #6093cc 0%,#84b6eb 100%);*/ /* Chrome10+,Safari5.1+ */
+    /*background: -o-linear-gradient(left,  #6093cc 0%,#84b6eb 100%);*/ /* Opera 11.10+ */
+    /*background: -ms-linear-gradient(left,  #6093cc 0%,#84b6eb 100%);*/ /* IE10+ */
+    /*background: linear-gradient(to right,  #6093cc 0%,#84b6eb 100%);*/ /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6093cc', endColorstr='#84b6eb',GradientType=1 ); *//* IE6-9 */
 }
-
+.feedback-btn {
+    background: #3fa0c9;
+    color: #fff;
+    text-shadow: none;
+    font-size: 16px;
+}
 .feedback-btn:focus {
     outline: thin dotted #333;
     outline: 5px auto -webkit-focus-ring-color;
@@ -290,7 +295,7 @@ button.feedback-btn.small, input[type="submit"].feedback-btn.small {
     right: 0px;
     display: block;
     top: 50%;
-    margin-right: -44px;
+    margin-right: -53px;
 }
 
 .feedback-transform {
